fixed so weeks are 'taller' in sectioned.js, and changed so the text in css for #svimlaneSVG is 1em, which will make the font change size dynamicly based on parent element. Need to make a new issue for fixing on mobile! (also removed an unnecessary <style>-tag in style.css since it gave me an ulser)

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -944,7 +944,7 @@ p {
 }
 
 #swimlaneSVG text {
-  font-size: 10px;
+  font-size: 1em;
 }
 
 #swimlaneSVG rect:nth-child(n of .progressBar){
